Fix spacing above community reviews and quote

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -376,7 +376,7 @@ hr.four {
   border-radius: 0.3rem;
 }
 .container_space {
-  margin-top: 150px;
+  margin-top: 100px;
 }
 .paymentCard {
   max-width: 20rem;
